--- a/Mochi/Assembly-CSharp.csproj
+++ b/Mochi/Assembly-CSharp.csproj
@@ -126,18 +126,22 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Resources\Story\story_chap2Police.txt" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\Resources\Story\story_chap1ChoiceA.txt" />
     <None Include="Assets\Resources\Story\story_chap0E2.txt" />
+    <None Include="Assets\Resources\Story\story_chap2PoliceGO2.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\Resources\Story\Commands.txt" />
     <None Include="Assets\Resources\Story\Chapter0_start.txt" />
+    <None Include="Assets\Resources\Story\story_chap2Right.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\Resources\Story\story_chap1ChoiceB.txt" />
     <None Include="Assets\Resources\Story\story_chap3b.txt" />
     <None Include="Assets\Resources\Story\story_chap1Bicycle.txt" />
     <None Include="Assets\Resources\Story\TestingLineSegmentation.txt" />
     <None Include="Assets\Resources\gameFiles\0.txt" />
+    <None Include="Assets\Resources\Story\story_chap2PoliceGO1.txt" />
     <None Include="Assets\Resources\Story\story_a1.txt" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
     <None Include="Assets\Resources\Images\TransitionEffects\TransitionEffect.shader" />
@@ -146,11 +150,14 @@
     <None Include="Assets\Resources\Story\story_chap0b.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
+    <None Include="Assets\Resources\Story\story_chap2Kuma.txt" />
     <None Include="Assets\Resources\Story\story_chap2a.txt" />
+    <None Include="Assets\Resources\Story\story_chap2PathChoice.txt" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Bangers - OFL.txt" />
     <None Include="Assets\Resources\Story\story_chap1a.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\Resources\Story\story_chap2Left.txt" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\LiberationSans - OFL.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\Resources\Story\story_chap3a.txt" />
