--- a/Mochi/Assembly-CSharp.csproj
+++ b/Mochi/Assembly-CSharp.csproj
@@ -133,7 +133,7 @@
     <None Include="Assets\Resources\Story\story_chap0E2.txt" />
     <None Include="Assets\Resources\Story\story_chap2PoliceGO2.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\Resources\Story\archive\Commands.txt" />
+    <None Include="Assets\Resources\Story\Commands.txt" />
     <None Include="Assets\Resources\Story\archive\Chapter0_start.txt" />
     <None Include="Assets\Resources\Story\story_chap2Right.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
